# testSNARK

./: CMakeLists.txt  circut.cpp  circut.h  crypto.cpp  crypto.h  funciton.cpp  funciton.h  main.cpp  operation.cpp  operation.h  polynom.cpp  polynom.h  proof.cpp  proof.h  setup.cpp  setup.h  snark.h  types.cpp  types.h
